# podfast

./: .gitignore  README.md  poc.py  pyproject.toml  requirements.txt
results/: Would the Universe be different with a zero Higgs field.txt
src/podfast/: main.py
src/podfast/crews/summarization_crew/: summarization_crew.py
src/podfast/crews/summarization_crew/config/: agents.yaml  tasks.yaml
